--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-	"name": "albums",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
-	},
-	"dependencies": {
-		"react": "~15.4.1",
-		"react-native": "0.42.0"
-	},
-	"devDependencies": {
-		"babel-jest": "19.0.0",
-		"babel-preset-react-native": "1.9.1",
-		"jest": "19.0.2",
-		"react-test-renderer": "~15.4.1",
-		"babel-eslint": "^6.1.0",
-		"eslint": "^2.13.1",
-		"eslint-config-airbnb": "9.0.1",
-		"eslint-plugin-import": "1.9.2",
-		"eslint-plugin-jsx-a11y": "1.5.3",
-		"eslint-plugin-react": "^5.2.2"
-	},
-	"jest": {
-		"preset": "react-native"
-	}
+  "name": "albums",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "axios": "^0.16.2",
+    "react": "~15.4.1",
+    "react-native": "0.42.0"
+  },
+  "devDependencies": {
+    "babel-jest": "19.0.0",
+    "babel-preset-react-native": "1.9.1",
+    "jest": "19.0.2",
+    "react-test-renderer": "~15.4.1",
+    "babel-eslint": "^6.1.0",
+    "eslint": "^2.13.1",
+    "eslint-config-airbnb": "9.0.1",
+    "eslint-plugin-import": "1.9.2",
+    "eslint-plugin-jsx-a11y": "1.5.3",
+    "eslint-plugin-react": "^5.2.2"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
