--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
     "react-native": "0.42.0"
   },
   "devDependencies": {
+    "babel-eslint": "^6.1.0",
     "babel-jest": "19.0.0",
     "babel-preset-react-native": "1.9.1",
-    "jest": "19.0.2",
-    "react-test-renderer": "~15.4.1",
-    "babel-eslint": "^6.1.0",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "9.0.1",
     "eslint-plugin-import": "1.9.2",
     "eslint-plugin-jsx-a11y": "1.5.3",
-    "eslint-plugin-react": "^5.2.2"
+    "eslint-plugin-react": "^5.2.2",
+    "jest": "19.0.2",
+    "react-test-renderer": "~15.4.1"
   },
   "jest": {
     "preset": "react-native"
